新增测试连接接口
