# backend/docs/swagger.yaml
@@ -1,4 +1,26 @@
 definitions:
+  request.DBConnectionRequest:
+    properties:
+      dbType:
+        description: 数据库类型
+        type: string
+      host:
+        description: 服务器地址
+        type: string
+      password:
+        description: 密码
+        type: string
+      port:
+        description: 端口
+        type: string
+      username:
+        description: 用户名
+        type: string
+    required:
+    - dbType
+    - password
+    - username
+    type: object
   request.InitProjectRequest:
     properties:
       adminAccount:
@@ -36,8 +58,6 @@ definitions:
   response.CheckResult:
     properties:
       result:
-        description: 是否需要初始化
-        example: true
         type: boolean
     type: object
   response.Response-any:
@@ -104,6 +124,28 @@ paths:
           schema:
             $ref: '#/definitions/response.Response-any'
       summary: 项目初始化
+      tags:
+      - initController
+  /init/test_db_connection:
+    post:
+      consumes:
+      - application/json
+      operationId: testDBConnection
+      parameters:
+      - description: 测试数据库连接相关参数
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/request.DBConnectionRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.Response-response_CheckResult'
+      summary: 测试数据库是否能够连接
       tags:
       - initController
 swagger: "2.0"
